DTO, validation, test, security, constructor injection, Docker, actuator ve loglama altyapısı projeye entegre edildi.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
-HELP.md
+### Maven ###
 target/
-!.mvn/wrapper/maven-wrapper.jar
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -31,3 +39,39 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Logs ###
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+### Environment Variables ###
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+### OS ###
+.DS_Store
+Thumbs.db
+
+### Application Specific ###
+application-local.properties
+application-dev.properties
+application-prod.properties
+
+### Test outputs ###
+/test/
+
+### IDEs ###
+.vscode/
+.idea/
+*.iml
+*.ipr
+*.iws
+
+### Env ###
+.env*
