--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 jwt.secret=mySuperSecretKey123
+# Swagger UI custom path
+springdoc.swagger-ui.path=/swagger-ui.html
+# API docs path
+springdoc.api-docs.path=/api-docs
+# Disable swagger-ui in production
+springdoc.swagger-ui.enabled=true
+
+management.endpoints.web.exposure.include=*
+
+logging.level.root=INFO
+# logging.level.org.springframework.security=DEBUG
