--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,13 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
 # Disable swagger-ui in production
 springdoc.swagger-ui.enabled=true
+# Additional Swagger UI settings
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.filter=true
 
 management.endpoints.web.exposure.include=*
 
 logging.level.root=INFO
-# logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=DEBUG
