Improve code quality with wrapper.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.datasource.username=postgres
 spring.datasource.password=2150
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-jwt.secret=mySuperSecretKey123
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+jwt.secret=this-is-a-super-secure-production-secret-for-jwt-that-is-long-enough
 # Swagger UI custom path
 springdoc.swagger-ui.path=/swagger-ui.html
 # API docs path
