--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,5 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/blogapi_test
-spring.datasource.username=postgres
-spring.datasource.password=2150
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true 
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+jwt.secret=this-is-a-super-secure-test-secret-for-jwt-that-is-long-enough 
