feat: Add Terraform IaC for AWS Deployment

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,11 @@ application-prod.properties
 
 ### Env ###
 .env*
+
+# Terraform
+.terraform/
+*.tfstate
+*.tfstate.*
+crash.log
+*.tfvars
+*.tfplan
