Refactor: Apply code review feedback

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.url=jdbc:postgresql://db:5432/blogdb
 spring.datasource.username=postgres
-spring.datasource.password=2150
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-jwt.secret=this-is-a-super-secure-production-secret-for-jwt-that-is-long-enough
+jwt.secret=${JWT_SECRET}
 # Swagger UI custom path
 springdoc.swagger-ui.path=/swagger-ui.html
 # API docs path
@@ -21,3 +21,9 @@ management.endpoints.web.exposure.include=*
 
 logging.level.root=INFO
 logging.level.org.springframework.security=DEBUG
+
+# CORS Configuration
+cors.allowed-origins=http://localhost:8080,http://localhost:3000
+cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+cors.allowed-headers=*
+cors.allow-credentials=true
