--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,15 @@
     "axios": "^1.10.0",
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
+    "i18next": "^23.7.6",
+    "i18next-browser-languagedetector": "^7.2.0",
     "lucide-react": "^0.445.0",
     "postcss": "^8.4.32",
     "prop-types": "^15.8.1",
     "quill": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
