--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,25 +2,25 @@ spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:mem:testdb}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:sa}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=${SHOW_SQL:true}
 spring.jpa.properties.hibernate.dialect=${DB_DIALECT:org.hibernate.dialect.H2Dialect}
-jwt.secret=${JWT_SECRET:mySecretKey123456789abcdefghijklmnopqrstuvwxyz}
+jwt.secret=${JWT_SECRET}
 # Swagger UI custom path
 springdoc.swagger-ui.path=/swagger-ui.html
 # API docs path
 springdoc.api-docs.path=/api-docs
-# Disable swagger-ui in production
-springdoc.swagger-ui.enabled=true
+# Swagger enabled only in development
+springdoc.swagger-ui.enabled=${SWAGGER_ENABLED:true}
 # Additional Swagger UI settings
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.tryItOutEnabled=true
 springdoc.swagger-ui.filter=true
 
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=health,info
 
 logging.level.root=INFO
-logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=${SECURITY_LOG_LEVEL:INFO}
 
 # CORS Configuration
 cors.allowed-origins=http://localhost:8080,http://localhost:3000
